--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-quill": "^1.2.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
