--- a/react_starter/package.json
+++ b/react_starter/package.json
@@ -18,6 +18,8 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7",
+    "google-client-api": "^1.0.4",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
