--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.6.1",
     "react-quill": "^1.2.2",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "youtube-search-api-with-axios": "^2.0.0"
   },
