--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-sortable-pane": "^0.6.8",
+    "react-split-pane": "^0.1.74",
     "redux": "^3.7.2",
     "youtube-search-api-with-axios": "^2.0.0"
   },
