--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/conmeconte/c10.17_notes_for_you#readme",
   "dependencies": {
-    "express": "^4.16.2",
-    "re-resizable": "^4.1.2",
+    "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.2",
     "mongoose": "^5.0.0-rc0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "re-resizable": "^4.1.2"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
