--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "bootstrap": "^3.3.7",
     "google-client-api": "^1.0.4",
     "immutable": "^3.8.2",
+    "is-image": "^2.0.0",
+    "is-url": "^1.2.2",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "re-resizable": "^4.1.2",
