--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon --inspect app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
