--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.0-rc0",
+    "mongoose-auto-increment": "^5.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "re-resizable": "^4.1.2",
