--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "re-resizable": "^4.1.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "youtube-api-search": "0.0.5"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
