--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "mongoose": "^5.0.0-rc0",
     "mongoose-auto-increment": "^5.0.1",
     "passport": "^0.4.0",
