--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "is-image": "^2.0.0",
     "is-url": "^1.2.2",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "re-resizable": "^4.1.2",
     "react": "^15.6.2",
