--- a/package.json
+++ b/package.json
@@ -28,16 +28,10 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "file-system": "^2.2.2",
-    "lodash": "^4.17.4",
-    "materialize-css": "^0.100.2",
     "mongoose": "^5.0.0-rc0",
     "mongoose-auto-increment": "^5.0.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "re-resizable": "^4.1.2",
-    "redux-form": "^7.2.0",
-    "redux-thunk": "^2.2.0",
-    "youtube-api-search": "0.0.5"
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
