implemented sample user account creation by using passport local strategy

--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,10 @@
   "name": "FlexNotes",
   "version": "1.0.0",
   "proxy": {
-    "/auth/google": {
+    "/auth/*": {
       "target": "http://localhost:9000"
     },
+
     "/userInfo": {
       "target": "http://localhost:9000"
     },
