--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^5.0.0-rc0",
     "mongoose-auto-increment": "^5.0.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
