--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
+    "normalize.css": "^8.0.0",
     "re-resizable": "^4.1.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
