--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "normalize.css": "^8.0.0",
+    "npm": "^5.7.1",
     "re-resizable": "^4.1.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
