--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:8.1.1-alpine 
+LABEL John Hong
+
 RUN mkdir -p /srv/app/server
 WORKDIR /srv/app/server
 
@@ -8,4 +10,5 @@ COPY package-lock.json /srv/app/server
 RUN npm install
 
 COPY . /srv/app/server
+EXPOSE 9000
 CMD ["npm", "start"]
