--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "fsevents": "^2.0.1",
     "mongoose": "^5.0.9",
