--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
-    "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js --progress --colors",
+    "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chung Hwan Hong",
